--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Реализован отзывчивый дизайн, чтобы сайт хорошо смотрелся на различных устройствах и размерах экрана. Применены соответствующие методы стилизации и верстки для создания эстетически привлекательного сайта.
                 Использовался CSS-фреймворк Bootstrap. Сайт оптимизирован с точки зрения производительности и доступности. Сайт развернут на хостинговой платформе GitHub.
               </p>
-               <p class="card-text">https://github.com/Vadimtkachef/spisok.git</p>
+               <p class="card-text">https://github.com/Vadimtkachef/Portfolio.git</p>
                 <p class="card-text">Технологии применяемые в проекте: HTML, CSS, JavaScript, VS Code, Bootstrap, GitHub</p>
                 <p class="card-text">Год создания: 2023</p> 
             </div>
